# krsu-oop

./: Lectures.md  Links.md  Readme.md  Results.md
Practice/: Practice_01-02.md  Practice_03.md  Practice_04.md  Practice_05.md
Practice/Build_Scripts/: CMakeLists.txt  conanfile.txt
Practice/Sources/aur/: .gitignore  CMakeLists.txt  Readme.md  conanfile.txt
Practice/Sources/aur/data/shaders/: es2_constant_shader.frag  es2_constant_shader.vert  es2_phong_shader.frag  es2_phong_shader.vert
Practice/Sources/aur/game/: main.cpp
Practice/Sources/aur/include/: aur.hpp
Practice/Sources/aur/include/geometries/: es2_geometry.hpp  geometry.hpp  geometry_generators.hpp  vertex.hpp
Practice/Sources/aur/include/lights/: ambient_light.hpp  directional_light.hpp  light.hpp  point_light.hpp  spot_light.hpp
Practice/Sources/aur/include/materials/: constant_material.hpp  es2_constant_material.hpp  es2_phong_material.hpp  material.hpp  phong_material.hpp
Practice/Sources/aur/include/math/: aabb.hpp  plane.hpp  ray.hpp  sphere.hpp
Practice/Sources/aur/include/objects/: camera.hpp  mesh.hpp  object.hpp
Practice/Sources/aur/include/renderer/: es2_renderer.hpp  es2_shader.hpp  renderer.hpp  shader.hpp
Practice/Sources/aur/include/scene/: scene.hpp
Practice/Sources/aur/include/textures/: es2_texture.hpp  texture.hpp
Practice/Sources/aur/include/utilities/: utilities.hpp
Practice/Sources/aur/include/window/: sdl_window.hpp  window.hpp
Practice/Sources/aur/tests/: general_usage_test.cpp  geometry_streaming_test.cpp  lighting_test.cpp  material_properties_test.cpp  normal_mapping_test.cpp  other_geometries_test.cpp  scene_graph_test.cpp  textured_plane_test.cpp  triangle_test.cpp  window_test.cpp
Practice/Sources/lab_01-02_partial/: CMakeLists.txt  field.cpp  field.h  main.cpp  turtle.cpp  turtle.h
Practice/Sources/lab_03/: CMakeLists.txt  main.cpp  rational.cpp  rational.h
Practice/Sources/lab_04_partial/: CMakeLists.txt  main.cpp  stack.h
Practice/Sources/lab_05/: CMakeLists.txt  circle.h  conanfile.txt  main.cpp  rectangle.h  shape.h  window.h
Practice/Sources/snake/: CMakeLists.txt  main.cpp
Practice/Sources/snake/models/: apple.cpp  apple.h  field.cpp  field.h  snake.cpp  snake.h
Practice/Sources/snake/views/: view.h
Practice/Sources/snake/views/console/: apple_console_view.cpp  apple_console_view.h  field_console_view.cpp  field_console_view.h  snake_console_view.cpp  snake_console_view.h
Practice/Sources/snake/views/graphics/: apple_graphics_view.cpp  apple_graphics_view.h  field_graphics_view.cpp  field_graphics_view.h  snake_graphics_view.cpp  snake_graphics_view.h
Practice/Sources/snake/window/: console_window.cpp  console_window.h  graphics_window.cpp  graphics_window.h  window.h
